# ais-analyse

./: .gitignore  design-backend.md  design-frontend.md  prompt.md  test-mike.txt  testmike.txt
ais-analyse-backend/: .env  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ais-analyse-backend/app/: config.py  data_process.py  database.py  main.py
ais-analyse-backend/app/models/: analysis.py  anomaly.py  port.py  vessel.py
ais-analyse-backend/app/routers/: analysis.py  animation.py  anomalies.py  azimuth.py  btree.py  btree_compare.py  companions.py  cpa.py  data.py  density.py  heatmap.py  ports.py  simplify.py  stops.py  vessels.py
ais-analyse-backend/app/services/: analysis_service.py  anomaly_service.py  bt_tree_service.py  data_process.py  port_service.py  predictor_service.py  vessel_service.py
ais-analyse-backend/app/services/bt_tree/: __init__.py  builder.py  models.py  query.py  split_policy.py  split_policy_optimized.py  tree.py
ais-analyse-backend/app/services/predictor/: Mutual_Attention_opt.py  ST_Tree_opt.py  Shape_encoder_opt.py  model_ep49.pth
ais-analyse-backend/app/utils/: geo.py
ais-analyse-backend/sql/: init.sql
ais-analyse-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
ais-analyse-frontend/src/: App.vue  main.ts  style.css  vite-env.d.ts
ais-analyse-frontend/src/api/: index.ts
ais-analyse-frontend/src/components/: LeftPanel.vue  MapView.vue  RightPanel.vue  StatusBar.vue  TopNavBar.vue
ais-analyse-frontend/src/stores/: app.ts
prototype/: index.html
(+3 files in other folders)
