[project]
name = "ais-analyse-backend"
version = "0.1.0"
description = "AIS 船舶轨迹分析系统后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "torch>=2.3.0",
    "shapely>=2.0.0",
    "pygeohash>=1.2.0",
    "tqdm>=4.66.0",
]
